# ITBA-MLOps

./: README.md
airbyte-dbt/: .env  .gitignore  README.md  requirements.txt
airbyte-dbt/dbt_mlops_project/: .user.yml  dbt_project.yml  profiles.yml
airbyte-dbt/dbt_mlops_project/models/: config.yml  movies.sql  scores.sql  scores_movies_users.sql
airbyte-dbt/scripts/: cleanupwh.sh  cleanupwh.sql  setupwh.sh  setupwh.sql  trigger_airbyte_sync.py
dagster/: .env  .gitignore  README.md  pyproject.toml
dagster/dbt_mlops_project/: dbt_project.yml
dagster/dbt_mlops_project/models/: config.yml  users.sql
dagster/docker/: docker-compose.yml
dagster/docker/mlflow/: dockerfile  requirements.txt
dagster/legacy/: movies_users.py
dagster/recommender_system/: configs.py  definitions.py  jobs.py  resources.py
dagster/recommender_system/assets/: __init__.py  airbyte.py  dbt.py
dagster/recommender_system/assets/recommender/: model_helper.py  train_model.py
dagster/scripts/: cleanupwh.sh  cleanupwh.sql  setupwh.sh  setupwh.sql  trigger_airbyte_sync.py
