[project]
name = "dagster-recommender-model"
version = "0.1.0"
description = "Curso MLOps ITBA Tomas V"
authors = [
    {name = "tomi",email = "tomi@v.ar"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (<2.1.0)",
    "mlflow (==2.17.2)",
    "dagster (==1.9.1)",
    "dagster-mlflow (==0.25.1)",
    "tensorflow (==2.18.0)",
    "dagster-airbyte (==0.25.1)",
    "dagster-dbt (==0.25.1)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "dagster-postgres (==0.25.1)",
    "boto3 (>=1.37.1,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
dagster-webserver = "*"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "recommender_system.definitions"
project_name = "recommender_system"